# voxelnav

./: CMakeLists.txt  LICENSE  README.md  costmap_plugins.xml  devlog_voxelnav.md  package.xml  setup.sh  test_standalone  test_standalone.cpp  verify_build.py
.github/workflows/: ci.yml
config/: default_params.yaml
docs/: ARCHITECTURE.md  CAPABILITY_MATRIX.md  DEPLOYMENT.md  MARKETING.md  README_TODDLER.md  TESTING.md
include/voxelnav/: segmenter.hpp  voxelizer.hpp
launch/: voxelnav.launch.py
src/: costmap_plugin.cpp  pathfinder_fmm.py  segmenter.cpp  voxel_processor.cpp  voxelizer.cpp  voxelnav_node.cpp
test/: core_smoke.cpp  generate_demo_assets.py  room_points.npy  test_voxelizer.cpp
